--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Illusion Builder Home</title>
 </head>
 <body>
-  <h1>Illusion Builder Home</h1>
-  This is the main land page for Illusion Builder.
+    <h1>Illusion Builder Home</h1>
+    This is the main land page for Illusion Builder.
+    <br>
+    <br>
+    This site will contain illusions.
+    <br>
+    Thanks for your support! ❤️
 </body>
 </html>
